# QuickPlotLib

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  GraphArea.qml  LICENCE  LICENSE  Plugin.cpp  README.md  __init__.py  _version.py  activate_venv.ps1  pyproject.toml  requirements.txt  setup_venv.ps1
QuickPlotLib/: Axes.qml  Axis.qml  CMakeLists.txt  Global.hpp  Glyph.cpp  Glyph.hpp  GlyphMetrics.cpp  GlyphMetrics.hpp  Graph.qml  GraphArea.qml  Plugin.cpp  QuickPlotLib.hpp  TickLabel.qml  TightText.cpp  TightText.hpp  __init__.py
docs/: build_docs.py  config.qdocconf  style.css
examples/: TestGrid.qml  __init__.py  gallery.py
tests/: __init__.py  test_import.py
