[project]
name = "QuickPlotLib"
description = "A scientific plotting library for QtQuick"
readme = "README.md"
license = { file = "LICENCE" }
authors = [{ name = "Miftek Corporation", email = "info@miftek.com" }]
dependencies = ["PySide6==6.10.1", "numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/imad-miftek/QuickPlotLib"

[project.optional-dependencies]
analyse = [
    # Code analysis
    "ruff",
    "mypy",
    # Testing
    "pytest",
    "pytest-cov",
    # Building
    "scikit-build-core",
    "shiboken6_generator==6.10.1",
    "setuptools_scm",
]

[build-system]
requires = ["scikit-build-core", "shiboken6_generator==6.10.1", "PySide6==6.10.1"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["QuickPlotLib/_version.py"]
sdist.exclude = [".github", ".vscode"]
wheel.py-api = "cp39"

[tool.scikit-build.cmake.define]
INSTALL_SUBPATH = "."

[tool.setuptools_scm]
write_to = "QuickPlotLib/_version.py"

[tool.ruff.lint.isort]
combine-as-imports = true
case-sensitive = false
